--- a/newspaper/templates/email_subscribe_form.html
+++ b/newspaper/templates/email_subscribe_form.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DjangoApp</title>
 </head>
 <body>
     <div class="container" style="max-width:600px">
         <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-            <h1 class="display-4">Welcome to GFG Class Based Views Django</h1>
+            <h1 class="display-4">Add Your Email to Get Daily Newspaper</h1>
 
         </div>
         <div class="py-5">
